Fixed side bar and dashboard's main content alignment

--- a/src/renderer/assets/css/dashboard.scss
+++ b/src/renderer/assets/css/dashboard.scss
@@ -774,8 +774,6 @@ body {
 }
 
 
-
-
 @media screen and (max-width: 1080px) {
 	#container-dashboard {
 		width: 1080px;
@@ -784,7 +782,7 @@ body {
 
 #header,
 #main {
-	display: table;
+	border: 1px solid red;
 	width: 100%;
 }
 
@@ -796,10 +794,11 @@ body {
 
 .content-wrapper-header,
 .content-wrapper-main {
-	border: 0px solid #09f;
+	border-radius: 6px;
 	float: right;
 	height: 100%;
 	margin-left: 30px;
+	position: relative;
 	width: calc(98% - 270px);
 }
 
@@ -927,21 +926,18 @@ body {
 }
 
 #top-icons {
-	border: 0;
+	border: 0px solid red;
 	border-right: 1px solid rgba(160, 160, 160, .2);
-	display: table;
 	float: left;
-	height: 100%;
+	height: 95%;
 	margin-right: 30px;
 }
 
 
 #top-icons .icon {
 	border: 0px solid rgba(160, 160, 160, .15);
-	border-bottom: 0;
-	border-top: 0;
 	display: table-cell;
-	height: 62px;
+	height: 65px;
 	position: relative;
 	width: 90px;
 }
@@ -1279,6 +1275,7 @@ body {
 
 #main {
 	border: 0px solid red;
+	display: table;
 }
 
 
@@ -1317,6 +1314,14 @@ body {
 }
 
 
+#side-navigation-wrapper .shift-content
+{
+	padding-left: 28px;
+}
+
+#side-navigation-wrapper .shift-content-top {
+	padding-left: 10px;
+}
 
 #side-navigation-wrapper .divider {
 	border: 0;
@@ -1342,10 +1347,11 @@ body {
 
 #logo,
 #logo-small {
+	border: 1px solid #fff;
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 20px;
+	height: 30px;
+	margin-left: 23px;
+	margin-top: 35px;
 }
 
 #logo {
@@ -1355,7 +1361,7 @@ body {
 
 #logo-small {
 	display: none;
-	margin-left: 23px;
+	width: 28px;
 }
 
 
@@ -1389,22 +1395,14 @@ body {
 	}
 
 
-	#side-navigation-wrapper .shift-content-top {
-		padding-left: 10px;
-	}
+	// #side-navigation-wrapper .shift-content-top {
+	// 	padding-left: 10px;
+	// }
 
 
 	#transaction-action-trigger-group .flex {
+		overflow: hidden;
 		width: 60px;
-	}
-
-	#transaction-action-trigger-group .flex:first-child,
-	#transaction-action-trigger-group .flex:last-child {
-		background-position: 50% 50%;
-	}
-
-	#transaction-action-trigger-group .flex span {
-		display: none;
 	}
 
 
@@ -1422,9 +1420,9 @@ body {
 	}
 
 
-	#side-navigation-wrapper:hover .shift-content-top {
-		padding-left: 30px;
-	}
+	// #side-navigation-wrapper:hover .shift-content-top {
+	// 	padding-left: 30px;
+	// }
 
 
 	#side-navigation-wrapper:hover .switch p {
@@ -1433,19 +1431,9 @@ body {
 
 
 	#side-navigation-wrapper:hover #transaction-action-trigger-group .flex {
-		width: 100%;
+		width: 259px;
 	}
 
-
-	#side-navigation-wrapper:hover #transaction-action-trigger-group .flex span {
-		display: block;
-	}
-
-
-	#side-navigation-wrapper:hover #transaction-action-trigger-group .flex:first-child,
-	#side-navigation-wrapper:hover #transaction-action-trigger-group .flex:last-child {
-		background-position: 10px 50%;
-	}
 
 	.content-wrapper-header,
 	.content-wrapper-main {
@@ -1500,6 +1488,7 @@ body {
 	border: 0px solid red;
 	display: table;
 	height: 100%;
+	outline: none;
 }
 
 .switch button {
@@ -1520,6 +1509,7 @@ body {
 	color: #999;
 	display: block;
 	float: right;
+	font-size: 14px;
 	font-weight: bold;
 	line-height: 1.2;
 	margin-left: 15px;
@@ -1605,25 +1595,31 @@ body {
 	color: #fff;
 	cursor: pointer;
 	display: block;
-	font-size: 14px;
+	font-size: 16px;
 	height: 40px;
 	line-height: 40px;
 	margin-top: 10px;
-	text-align: center;
-	width: 100%;
+	transition: all .3s;
+	width: 259px;
 }
 
 
-#transaction-action-trigger-group a:first-child {
-	background: #0364ff url('../icon/noun-send-1322966.svg')no-repeat 10px 50%;
+#transaction-action-trigger-group .flex:first-child {
+	background: #0364ff url('../icon/noun-send-1322966.svg')no-repeat 20px 50%;
 	background-size: 18px;
 	margin-top: 0;
 }
 
 
-#transaction-action-trigger-group a:last-child {
-	background: #a5a7b4 url('../icon/combined-shape.svg')no-repeat 10px 50%;
+#transaction-action-trigger-group .flex:last-child {
+	background: #a5a7b4 url('../icon/combined-shape.svg')no-repeat 20px 50%;
 	background-size: 18px;
+}
+
+
+#transaction-action-trigger-group span
+{
+	margin-left: 75px;
 }
 
 
@@ -1662,7 +1658,7 @@ body {
 
 
 #side-navigation-wrapper .side-nav strong {
-	margin-left: 9px;
+	margin-left: 15px;
 }
 
 
@@ -1719,7 +1715,7 @@ body {
 	float: left;
 	font-size: 14px;
 	font-style: normal;
-	margin-left: 29px;
+	margin-left: 33px;
 }
 
 
@@ -1733,7 +1729,7 @@ body {
 	border: 0;
 	font-size: 12px;
 	margin-top: 15px;
-	padding-left: 49px;
+	padding-left: 54px;
 }
 
 
@@ -1776,7 +1772,7 @@ body {
 #side-nav-footer-content .section p,
 #side-nav-footer-content .section a {
 	color: #999;
-	padding-left: 50px;
+	padding-left: 55px;
 }
 
 
@@ -1867,6 +1863,7 @@ body {
 .statistics-content-wrapper {
 
 	border: 0px solid red;
+	border-radius: 6px;
 	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.05);
 	min-height: 100px;
 	width: 100%;
@@ -1972,6 +1969,7 @@ body {
 .statistics-filter span {
 	color: #ffffff;
 	float: left;
+	margin-top: 2px;
 }
 
 
@@ -1983,6 +1981,7 @@ body {
 	float: right;
 	font-size: 15px;
 	height: 33px;
+	line-height: 33px;
 	margin-left: 20px;
 	margin-top: 10px;
 	width: 76px;
@@ -2078,7 +2077,7 @@ body {
 .statistics-container .statistic span {
 	color: rgba(255, 255, 255, 0.6);
 	display: block;
-	margin-top: 15px;
+	margin-top: 0px;
 }
 
 
@@ -2092,7 +2091,6 @@ body {
 	color: #515f88;
 	display: block;
 	font-style: normal;
-	margin-top: 10px;
 }
 
 
@@ -2231,15 +2229,14 @@ body {
 .data-activity-header h3 {
 	color: #354052;
 	float: left;
-	font-size: 18px
+	font-size: 20px;
+	font-weight: bold;
 }
 
 .data-activity-header ul {
 	border: 0px solid red;
 	display: table;
 	float: right;
-	height: 30px;
-	margin-top: 20px;
 }
 
 .data-activity-header ul span,
@@ -2251,6 +2248,7 @@ body {
 	float: left;
 	font-size: 15px;
 	margin-right: 30px;
+	margin-top: 2px;
 }
 
 .data-activity-header li {
@@ -2261,7 +2259,8 @@ body {
 	height: 30px;
 	list-style-type: none;
 	margin-right: 20px;
-	padding: 0 8px
+	padding: 0 8px;
+	vertical-align: top;
 }
 
 
